--- a/index.html
+++ b/index.html
@@ -68,7 +68,45 @@
   <div class="n">株式会社estraはデジタル化が遅れている教育業界に<br>最新のテクノロジーを導入することによって教育の<br>DXを実現します。<p></p>
    
    <br>独自のオペレーションとコーチングを融合した新しい<br>教育の仕組みにより、一人ひとりに合わせた最適な教<br>育を提供します。</div>  
-  <div class="blog_first"></div>
+
+   <div class="o">Service</div>
+   <div class="p">サービス内容</div>
+   <div class="t"></div>
+   <div class="u"></div>
+   <div class="v"></div>
+   
+   
+ <div>
+   <main class="main3"></main>
+   <main class="main4"></main>
+   <main class="main5"></main>
+   </div>
+
+  <div class="q">Blog</div> 
+   <div class="r">ブログ</div>
+
+  <div class="service_first"></div>
+  <div class="service_first2"></div>
+  <div class="service_first3"></div>
+
+  <div>
+    <p class="w">教育事業</p>
+    <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p>
+    <p class="y">教育事業</p>
+    <p class="z">サンプルサンプルテキストがここには入ります。<br>テキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+    <p class="aa">教育事業</p>
+    <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+  </div>
+  
+<ul class="s">
+  <li class="s-1">Blog</li>
+  <li class="s-2">Blog</li>
+  <li class="s-3">Blog</li>
+</ul>
+
+  
+  
+
   <div class="recruit"></div>
   <div class="interview"></div>
 
