--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
    <main class="main5"></main>
    </div>
 
-  <div class="q">Blog</div> 
-   <div class="r">ブログ</div>
-
+  
   <div class="service_first"></div>
   <div class="service_first2"></div>
   <div class="service_first3"></div>
@@ -93,11 +91,16 @@
     <p class="w">教育事業</p>
     <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p>
     <p class="y">教育事業</p>
-    <p class="z">サンプルサンプルテキストがここには入ります。<br>テキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+    <p class="z">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
     <p class="aa">教育事業</p>
     <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
   </div>
   
+
+  <div class="main6"></div>
+  <div class="q">Blog</div> 
+   <div class="r">ブログ</div>
+
 <ul class="s">
   <li class="s-1">Blog</li>
   <li class="s-2">Blog</li>
