--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
   <div class="main6"></div>
   <div class="q">Blog</div> 
    <div class="r">ブログ</div>
+   <div class="image">
+     <img src="img/blog__first.jpg" alt="">
+   </div>
+   
 
 <ul class="s">
   <li class="s-1">Blog</li>
