--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
   
-  
+ <body>
 
   <div>
     <header class="estra_logo"></header>
@@ -28,7 +28,7 @@
   
 
 
-      <body>
+      
         <div class="firstview"></div>
         <h2 class="a">Commit to the <span class ="font">growth</span><br>for everyone</h2>
         <div>
@@ -98,10 +98,15 @@
   
 
   <div class="main6"></div>
-  <div class="q">Blog</div> 
-   <div class="r">ブログ</div>
-   <div class="image">
+  
+   <div class="image"></div>
+    <div class="q">Blog</div> 
+    <div class="r">ブログ</div>
+
+    <div class="image">
+      <img src="img/blog__first.jpg" alt="">
      <img src="img/blog__first.jpg" alt="">
+     <img src="img/blog__first.jpg" alt=""> 
    </div>
    
 
