--- a/index.html
+++ b/index.html
@@ -103,18 +103,20 @@
     <div class="q">Blog</div> 
     <div class="r">ブログ</div>
 
-    <div class="image">
-      <img src="img/blog__first.jpg" alt="">
-     <img src="img/blog__first.jpg" alt="">
-     <img src="img/blog__first.jpg" alt=""> 
-   </div>
    
+   <div class="card">
+    <img src="blog__first.jpg" alt="">
+    <p>Blog</p>
+    <div class="text">
+      <p class="txt__detail">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
+      <div class="txt__about">
+        <p>2021/01/01</p>
+        <p>＃COACHTECH</p>
+      </div>
+    </div>
+  </div>
 
-<ul class="s">
-  <li class="s-1">Blog</li>
-  <li class="s-1">Blog</li>
-  <li class="s-1">Blog</li>
-</ul>
+
 
   
   
