--- a/index.html
+++ b/index.html
@@ -115,8 +115,36 @@
       </div>
     </div>
   </div>
+  <div class="aj">
+    <p>一覧ページへ</p>
+  </div>
 
+<div class="ac">Company</div>
+<div class="ad">会社概要</div>
+<ul class="ae">
+  <li>会社名</li>
+  <li>代表者名</li>
+  <li>本社所在地</li>
+  <li>従業員数</li>
+  <li>電話番号</li>
+  <li>資本金</li>
+</ul>
 
+<ul class="af">
+  <li>株式会社estra</li>
+  <li>福場凛太朗</li>
+  <li>東京都渋谷区1-1-1</li>
+  <li>100名</li>
+  <li>0120-00-0000</li>
+  <li>￥10,000,000</li>
+</ul>
+
+<div class="ag">採用情報</div>
+<div class="ah">社員インタビュー</div>
+<div class="ai">株式会社estraへのお問い合わせはこちらから</div>
+<div class="ai">
+ <p>お問い合わせ</p>
+</div>
 
   
   
