--- a/index.html
+++ b/index.html
@@ -121,23 +121,49 @@
 
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
-<ul class="ae">
-  <li>会社名</li>
-  <li>代表者名</li>
-  <li>本社所在地</li>
-  <li>従業員数</li>
-  <li>電話番号</li>
-  <li>資本金</li>
-</ul>
+<table class="ag"
+<table border="1">
+   <tr>
+     <td>会社名</td><td>株式会社estra</td>
+   </tr>
+   <tr>
+     <td>代表者名</td><td>福場凛太朗</td>
+   </tr>
+   <tr>
+    <td>本社所在地</td><td>東京都渋谷区1-1-1</td>
+  </tr>
+  <tr>
+    <td>従業員数</td><td>100名</td>
+  </tr>
+  <tr>
+    <td>電話番号</td><td>0120-00-0000</td>
+  </tr>
+  <tr>
+    <td>資本金</td><td>￥10,000,000</td>
+  </tr>
+</table>
 
-<ul class="af">
-  <li>株式会社estra</li>
-  <li>福場凛太朗</li>
-  <li>東京都渋谷区1-1-1</li>
-  <li>100名</li>
-  <li>0120-00-0000</li>
-  <li>￥10,000,000</li>
-</ul>
+<table class="af">
+  
+<tr>
+  <td>会社名</td>
+</tr>
+<tr>
+  <td>代表者名</td>
+</tr>
+<tr>
+ <td>本社所在地</td>
+</tr>
+<tr>
+ <td>従業員数</td>
+</tr>
+<tr>
+ <td>電話番号</td>
+</tr>
+<tr>
+ <td>資本金</td>
+</tr>
+</table>
 
 <div class="ag">採用情報</div>
 <div class="ah">社員インタビュー</div>
