--- a/index.html
+++ b/index.html
@@ -121,48 +121,34 @@
 
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
-<table class="ag"
-<table border="1">
-   <tr>
-     <td>会社名</td><td>株式会社estra</td>
-   </tr>
-   <tr>
-     <td>代表者名</td><td>福場凛太朗</td>
-   </tr>
-   <tr>
-    <td>本社所在地</td><td>東京都渋谷区1-1-1</td>
-  </tr>
-  <tr>
-    <td>従業員数</td><td>100名</td>
-  </tr>
-  <tr>
-    <td>電話番号</td><td>0120-00-0000</td>
-  </tr>
-  <tr>
-    <td>資本金</td><td>￥10,000,000</td>
-  </tr>
-</table>
 
-<table class="af">
-  
-<tr>
-  <td>会社名</td>
-</tr>
-<tr>
-  <td>代表者名</td>
-</tr>
-<tr>
- <td>本社所在地</td>
-</tr>
-<tr>
- <td>従業員数</td>
-</tr>
-<tr>
- <td>電話番号</td>
-</tr>
-<tr>
- <td>資本金</td>
-</tr>
+
+
+<table>
+  <tr>
+    <th>会社名</th>
+    <td>株式会社estra</td>
+  </tr>
+  <tr>
+    <th>代表者名</th>
+    <td>福場凛太朗</td>
+  </tr>
+  <tr>
+    <th>本社所在地</th>
+    <td>東京都渋谷区1-1-1</td>
+  </tr>
+  <tr>
+    <th>従業員数</th>
+    <td>100名</td>
+  </tr>
+  <tr>
+    <th>電話番号</th>
+    <td>0120-00-0000</td>
+  </tr>
+  <tr>
+    <th>資本金</th>
+    <td>￥10,000,000</td>
+  </tr>
 </table>
 
 <div class="ag">採用情報</div>
