--- a/index.html
+++ b/index.html
@@ -106,19 +106,43 @@
    
    <div class="card">
     <img src="blog__first.jpg" alt="">
-    <p>Blog</p>
+    <p class="ah">Blog</p>
     <div class="text">
-      <p class="txt__detail">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
-      <div class="txt__about">
-        <p>2021/01/01</p>
-        <p>＃COACHTECH</p>
+      <p class="txt_detail">プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</p>
+      <div class="txt_about">
+        <p class="ai">2021/01/01</p>
+        <p class="ak">＃COACHTECH</p>
       </div>
     </div>
   </div>
-  <div class="aj">
-    <p>一覧ページへ</p>
+
+  <div class="card1">
+    <img src="blog__first.jpg" alt="">
+    <p class="ah">Blog</p>
+    <div class="text">
+      <p class="txt_detail">プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</p>
+      <div class="txt_about">
+        <p class="ai">2021/01/01</p>
+        <p class="ak">＃COACHTECH</p>
+      </div>
+    </div>
   </div>
 
+  <div class="card2">
+    <img src="blog__first.jpg" alt="">
+    <p class="ah">Blog</p>
+    <div class="text">
+      <p class="txt_detail">プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</p>
+      <div class="txt_about">
+        <p class="ai">2021/01/01</p>
+        <p class="ak">＃COACHTECH</p>
+      </div>
+    </div>
+  </div>
+
+  <div>
+  <p class="aj">一般ページへ</p>
+</div>
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
 
@@ -151,10 +175,10 @@
   </tr>
 </table>
 
-<div class="ag">採用情報</div>
-<div class="ah">社員インタビュー</div>
-<div class="ai">株式会社estraへのお問い合わせはこちらから</div>
-<div class="ai">
+<div class="al">採用情報</div>
+<div class="an">社員インタビュー</div>
+<div class="am">株式会社estraへのお問い合わせはこちらから</div>
+<div class="ao">
  <p>お問い合わせ</p>
 </div>
 
