--- a/index.html
+++ b/index.html
@@ -181,12 +181,9 @@
 <div class="ao">
  <p>お問い合わせ</p>
 </div>
-
-  
-  
-
-  <div class="recruit"></div>
-  <div class="interview"></div>
-
+  <ul class="img2">
+    <li class="img2-item"><img src="img/recruit.png" alt=""></li>
+    <li class="img2-item2"><img src="img/interview.png" alt=""></li>
+  </ul>
 </body>
 </html>
