--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
 
   <div>
-  <p class="aj">一般ページへ</p>
+  <p class="aj">一覧ページへ</p>
 </div>
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
@@ -175,15 +175,18 @@
   </tr>
 </table>
 
-<div class="al">採用情報</div>
-<div class="an">社員インタビュー</div>
-<div class="am">株式会社estraへのお問い合わせはこちらから</div>
-<div class="ao">
- <p>お問い合わせ</p>
-</div>
   <ul class="img2">
     <li class="img2-item"><img src="img/recruit.png" alt=""></li>
     <li class="img2-item2"><img src="img/interview.png" alt=""></li>
   </ul>
+
+  <div class="estra">株式会社estraへのお問い合わせはこちらから
+  </div>
+  <div class="bar"></div>
+  <div class="mail">お問い合わせ</div>
+  <div class="background1"></div>
+  <small>Copyright &copy; estra,inc All Rights Reserved.</small>
+  <div class="al">採用情報</div>
+<div class="an">社員インタビュー</div>
 </body>
 </html>
