--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
   <div class="mail">お問い合わせ</div>
   <div class="background1"></div>
   <small>Copyright &copy; estra,inc All Rights Reserved.</small>
+  <div class="mail icon"></div>
+  
   <div class="al">採用情報</div>
 <div class="an">社員インタビュー</div>
 </body>
