--- a/index.html
+++ b/index.html
@@ -183,10 +183,14 @@
   <div class="estra">株式会社estraへのお問い合わせはこちらから
   </div>
   <div class="bar"></div>
-  <div class="mail">お問い合わせ</div>
+  <div class="mail">お問い合わせ<div class="mailicon"><div class="mailicon2"></div></div></div>
+
+  
+    
+  
   <div class="background1"></div>
   <small>Copyright &copy; estra,inc All Rights Reserved.</small>
-  <div class="mail icon"></div>
+  
   
   <div class="al">採用情報</div>
 <div class="an">社員インタビュー</div>
