--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
   </tr>
 </table>
 
-  <ul class="img2">
-    <li class="img2-item"><img src="img/recruit.png" alt=""></li>
-    <li class="img2-item2"><img src="img/interview.png" alt=""></li>
-  </ul>
+  <div class="img2">
+    <div class="img2-item"><img src="img/recruit.png" alt=""></div>
+    <div class="img2-item2"><img src="img/interview.png" alt=""></div>
+  </div>
 
   <div class="estra">株式会社estraへのお問い合わせはこちらから
   </div>
