--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="q">Blog</div> 
     <div class="r">ブログ</div>
 
-   
+   <div class="car">
    <div class="card">
     <img src="blog__first.jpg" alt="">
     <p class="ah">Blog</p>
@@ -139,7 +139,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <div>
   <p class="aj">一覧ページへ</p>
 </div>
@@ -184,6 +184,8 @@
   </div>
   <div class="bar"></div>
   <div class="mail">お問い合わせ<div class="mailicon"><div class="mailicon2"></div></div></div>
+
+
 
   
     
