--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     
   
   <div class="background1"></div>
-  <small>Copyright &copy; estra,inc All Rights Reserved.</small>
+  <small class="small1">Copyright &copy; estra,inc All Rights Reserved.</small>
   
   
   <div class="al">採用情報</div>
