--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
   
     
   
-  <div class="background1"></div>
-  <small class="small1">Copyright &copy; estra,inc All Rights Reserved.</small>
+  <div class="background1">
+  <small class="small1">Copyright &copy; estra,inc All Rights Reserved.</small></div>
   
   
   <div class="al">採用情報</div>
