--- a/index.html
+++ b/index.html
@@ -175,17 +175,31 @@
   </tr>
 </table>
 
-  <div class="img2">
-    <div class="img2-item"><img src="img/recruit.png" alt=""></div>
-    <div class="img2-item2"><img src="img/interview.png" alt=""></div>
-  </div>
+<div class="img2">
+  <dic class="img2-item"><img src="img/recruit.png" alt="">
+    <div class="img2-item-list">
+      <p class="al">採用情報</p>
+     </div>
+  </dic>
+  <div class="img2-item2"><img src="img/interview.png" alt="">
+   <div class="img2-item2-list">
+     <p class="al">社員インタビュー</p>
+   </div>
+</div>
+</div>
 
-  <div class="estra">株式会社estraへのお問い合わせはこちらから
-  </div>
+
+  
+
+
+  
+
+  <p class="estra">株式会社estraへのお問い合わせはこちらから
+  </p>
   <div class="bar"></div>
   <div class="mail">お問い合わせ<div class="mailicon"><div class="mailicon2"></div></div></div>
 
-
+  
 
   
     
