--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
 
   
-    <header class="estra_logo"></header>
+    <header class="estra_logo">
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">News</a></li>
@@ -23,7 +23,7 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">Contact</a></li>
         </ul>
       </nav>
-    
+    </header>
     
   
 
@@ -176,11 +176,11 @@
 </table>
 
 <div class="img2">
-  <dic class="img2-item"><img src="img/recruit.png" alt="">
+  <div class="img2-item"><img src="img/recruit.png" alt="">
     <div class="img2-item-list">
       <p class="al">採用情報</p>
      </div>
-  </dic>
+  </div>
   <div class="img2-item2"><img src="img/interview.png" alt="">
    <div class="img2-item2-list">
      <p class="al">社員インタビュー</p>
@@ -193,9 +193,9 @@
 
 
   
-
-  <p class="estra">株式会社estraへのお問い合わせはこちらから
-  </p>
+<div class="estra">
+  <p>株式会社estraへのお問い合わせはこちらから
+  </p></div>
   <div class="bar"></div>
   <div class="mail">お問い合わせ<div class="mailicon"><div class="mailicon2"></div></div></div>
 
