--- a/index.html
+++ b/index.html
@@ -176,41 +176,28 @@
 </table>
 
 <div class="img2">
-  <div class="img2-item"><img src="img/recruit.png" alt="">
-    <div class="img2-item-list">
-      <p class="al">採用情報</p>
-     </div>
+
+  <div class="img2-item">
+
+    <p class="al">採用情報</p>
+   <img src="img/recruit.png" alt=""></div>
+     
+  <div class="img2-item2">
+    <p class="al">社員インタビュー</p>
+  <img src="img/interview.png" alt="">
   </div>
-  <div class="img2-item2"><img src="img/interview.png" alt="">
-   <div class="img2-item2-list">
-     <p class="al">社員インタビュー</p>
-   </div>
-</div>
 </div>
 
-
-
-
-  
-
-
-  
 <div class="estra">
   <p>株式会社estraへのお問い合わせはこちらから
   </p></div>
   <div class="bar"></div>
   <div class="mail">お問い合わせ<div class="mailicon"><div class="mailicon2"></div></div></div>
 
-  
-
-  
-    
-  
   <div class="background1">
   <small class="small1">Copyright &copy; estra,inc All Rights Reserved.</small></div>
   
   
-  <p class="al">採用情報</p>
-<p class="an">社員インタビュー</p>
+  
 </body>
 </html>
