--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
  <body>
 
   
-    <header class="estra_logo">
-   　   <nav class="header-nav">
+    <header><div class="estra_logo"></div><nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">News</a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">About</a></li>
@@ -97,12 +96,13 @@
   
   
 
-  <div class="main6"></div>
+    <div class="main6"></div>
   
    <div class="image"></div>
     <p class="q">Blog</p> 
     <p class="r">ブログ</p>
 
+    
    <div class="car">
    <div class="card">
     <img src="blog__first.jpg" alt="">
@@ -145,7 +145,7 @@
 </div>
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
-
+</div>
 
 
 <table>
