--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </div>
 <div class="ac">Company</div>
 <div class="ad">会社概要</div>
-</div>
+
 
 
 <table>
@@ -175,19 +175,6 @@
   </tr>
 </table>
 
-<div class="img2">
-
-  <div class="img2-item">
-
-    <p class="al">採用情報</p>
-   <img src="img/recruit.png" alt=""></div>
-     
-  <div class="img2-item2">
-    <p class="al">社員インタビュー</p>
-  <img src="img/interview.png" alt="">
-  </div>
-</div>
-
 <div class="estra">
   <p>株式会社estraへのお問い合わせはこちらから
   </p></div>
@@ -196,8 +183,23 @@
 
   <div class="background1">
   <small class="small1">Copyright &copy; estra,inc All Rights Reserved.</small></div>
-  
-  
+
+  <div class="centertop">
+  <div class="center">
+    <p class="center-item">採用情報</p>
+    <img src="img/recruit.png" alt=""></div>
+
+    <div class="center2">
+      <p class="center2-item">社員インタビュー</p>
+      <img src="img/interview.png" alt="">
+    </div>
+    </div>
+   
+  <div class="grid">
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+  </div>
   
 </body>
 </html>
