--- a/index.html
+++ b/index.html
@@ -76,24 +76,16 @@
    
    
  
-   <div class="main3"></div>
-   <div class="main4"></div>
-   <div class="main5"></div>
    
 
   
-  <div class="service_first"></div>
-  <div class="service_first2"></div>
-  <div class="service_first3"></div>
-
   
-    <p class="w">教育事業</p>
-    <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p>
-    <p class="y">教育事業</p>
-    <p class="z">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
-    <p class="aa">教育事業</p>
-    <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
   
+  
+  
+    
+   
+    
   
 
     <div class="main6"></div>
@@ -196,10 +188,16 @@
     </div>
    
   <div class="grid">
-    <div class="box1"></div>
-    <div class="box2"></div>
-    <div class="box3"></div>
+    <div class="box-1"><div class="service_first"></div><p class="w">教育事業</p>
+    <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p></div>
+    <div class="box-2"><div class="service_first2"></div> <p class="y">教育事業</p>
+    <p class="z">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p></div>
+    <div class="box-3"><div class="service_first3"></div><p class="aa">教育事業</p>
+    <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+  
   </div>
+  </div>
+  
   
 </body>
 </html>
