--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
   
   
   
-  
     
    
     
@@ -188,16 +187,28 @@
     </div>
    
   <div class="grid">
-    <div class="box-1"><div class="service_first"></div><p class="w">教育事業</p>
-    <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p></div>
-    <div class="box-2"><div class="service_first2"></div> <p class="y">教育事業</p>
-    <p class="z">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p></div>
-    <div class="box-3"><div class="service_first3"></div><p class="aa">教育事業</p>
-    <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+    <div class="box-1">
+      <div class="service_first">
+
+    </div><p class="w">教育事業</p>
+    <p class="x">サンプルテキストがここには入ります。サンプルテキ<br>ストがここには入ります。サンプルテキストがここ<br>には入ります。</p>
+  </div>
+
+
+    <div class="box-2"><img src="img/service__first.svg" alt="" class="img-service"><div><p class="y">教育事業</p>
+    <p class="z">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+  </div></div>
+
+
+    <div class="box-3"><img src="img/service__first.svg" alt="" class="img-service2"><div><p class="aa">教育事業</p>
+    <p class="ab">サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p></div>
+  
   
   </div>
-  </div>
-  
+</div>
+
+
+ 
   
 </body>
 </html>
